HistoryHeuristic hinzugefugt